_sass/styles-dark.scss
.pdficon {
    background-image: $pdficon-bg-image-dark;
    opacity: $pdficon-o-dark;
}

a {
	color: $link-color-dark;
	
	&.active, &:active {
		color: $link-active-color-dark;
	}
	
	&:hover {
		color: $link-hover-color-dark;
	}
}




aside {
	nav {
		& > div > div {
			background: $nav-bg-dark;
		
			ul {
				.nav-link, .nav-link:active, .nav-link:hover {
					background: $nav-inner-bg-dark;
					color: $nav-fg-dark;
					opacity: 1;
				}
				
				.nav-link.active {
					color: $nav-fg-dark !important
				}
			}
		}
	}
}




main {
	& > div { 
		background: $main-bg-dark;
	
		article, & > textarea {
			background: $main-inner-bg-dark;
			color: $main-fg-dark;

			.text-muted {
				color: $text-muted-fg-dark !important;
			}
		}
	}
	
	footer {
		color: $footer-fg-dark;
		
		a, a:active, a:hover, a:visited {
			color: $footer-fg-dark !important;
		}
	}
}




@include media-breakpoint-up(md) {
	aside {
		nav {
			& > div > div {
				background: transparent;
		
				ul {
					background: transparent;

					.nav-link, .nav-link:hover, .nav-link.active, .nav-link.show {
						background: transparent;
						color: $nav-fg-md-dark !important;
						
						svg {
							fill: $nav-fg-md-dark;
						}
					}
				}
			}
		}
	}
}

